# swagger/v1/swagger.yaml
@@ -668,6 +668,30 @@ paths:
                           extra_large:
                             type: integer
                             description: Total Gigantes
+                  adopters:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        description: Conteo Total
+                      ages:
+                        type: object
+                        properties:
+                          less_twenty:
+                            type: integer
+                            description: Menos de 20
+                          twenty_thirty:
+                            type: integer
+                            description: 20 a 30
+                          thirty_forty:
+                            type: integer
+                            description: 30 a 40
+                          forty_fifty:
+                            type: integer
+                            description: 40 a 50
+                          fifty_more:
+                            type: integer
+                            description: 50 a más
   "/veterinary_appointments":
     get:
       summary: Lista de citas al veterinario
